Code additions to add useful functionality
Code changes:

Added caching functionality for currency descriptions - currency descriptions will be fetched from Treasury API on startup, and cached in DB, but also at a scheduled interval.

Added better exception handling and descriptions.

Changed AmountUSD from decimal to String. This was to better handle possible double conversion that uses floating point.

Added keystore for self-signing certificate, enabled use of https.

Testing:

Added additional testcases. All test passing 100%

TBD: Documentation
