# src/main/java/com/example/wex/entity/PurchaseEntity.java
@@ -1,10 +1,15 @@
 package com.example.wex.entity;
 
 import jakarta.persistence.*;
+import lombok.Getter;
+import lombok.Setter;
+
 import java.math.BigDecimal;
 import java.time.LocalDate;
 import java.util.UUID;
 
+@Setter
+@Getter
 @Entity
 @Table(name = "purchases")
 public class PurchaseEntity {
@@ -21,17 +26,4 @@ public class PurchaseEntity {
 
     @Column(nullable = false, precision = 12, scale = 2)
     private BigDecimal amountUsd;
-
-    // Getters and setters
-    public UUID getId() { return id; }
-    public void setId(UUID id) { this.id = id; }
-
-    public String getDescription() { return description; }
-    public void setDescription(String description) { this.description = description; }
-
-    public LocalDate getTransactionDate() { return transactionDate; }
-    public void setTransactionDate(LocalDate transactionDate) { this.transactionDate = transactionDate; }
-
-    public BigDecimal getAmountUsd() { return amountUsd; }
-    public void setAmountUsd(BigDecimal amountUsd) { this.amountUsd = amountUsd; }
 }
